--- a/src/KeyboardHero.csproj
+++ b/src/KeyboardHero.csproj
@@ -75,6 +75,7 @@
     <Content Include="..\LICENSE.txt">
       <Link>Resources\LICENSE.txt</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
