--- a/src/KeyboardHero.csproj
+++ b/src/KeyboardHero.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CommandDto.cs" />
     <Compile Include="CommandHistory.cs" />
     <Compile Include="CommandIntercepter.cs" />
     <Compile Include="Commands\OpenHistoryFileCommand.cs" />
